--- a/index.html
+++ b/index.html
@@ -819,42 +819,38 @@ label {
     </div>
   </div>
   
-    <script>
+<script>
 document.addEventListener("DOMContentLoaded", () => {
   const pageWrapper = document.getElementById("page-wrapper");
   const modales = document.querySelectorAll(".modal");
 
-  /* === ABRIR Y CERRAR MODALES === */
+  /* === FUNCIÓN GLOBAL PARA CERRAR === */
   function closeAllModals() {
     modales.forEach(modal => modal.classList.remove("show"));
-    pageWrapper.classList.remove("blurred");
+    if (pageWrapper) pageWrapper.classList.remove("blurred");
     history.pushState(null, "", location.href.split("#")[0]);
   }
 
+  /* === CONFIGURADOR DE MODALES (seguro) === */
   function setupModal(openBtnId, modalId, closeBtnId) {
     const openBtn = document.getElementById(openBtnId);
     const modal = document.getElementById(modalId);
     const closeBtn = document.getElementById(closeBtnId);
 
+    if (!openBtn || !modal || !closeBtn) return; // Evita errores si falta algo
+
     openBtn.addEventListener("click", () => {
       modal.classList.add("show");
-      pageWrapper.classList.add("blurred");
+      if (pageWrapper) pageWrapper.classList.add("blurred");
       history.pushState({ modal: modalId }, "", "#" + modalId);
     });
 
     closeBtn.addEventListener("click", closeAllModals);
-
-    modal.addEventListener("click", (e) => {
-      if (e.target === modal) closeAllModals();
-    });
-
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "Escape" && modal.classList.contains("show")) {
-        closeAllModals();
-      }
-    });
+    modal.addEventListener("click", (e) => { if (e.target === modal) closeAllModals(); });
+    document.addEventListener("keydown", (e) => { if (e.key === "Escape") closeAllModals(); });
   }
 
+  /* === CONFIGURAR TODOS === */
   setupModal("asistenciaBtn", "asistenciaModal", "closeAsistencia");
   setupModal("trasladoBtn", "trasladoModal", "closeTraslado");
   setupModal("ubicacionBtn", "ubicacionModal", "closeUbicacion");
@@ -880,20 +876,20 @@ document.addEventListener("DOMContentLoaded", () => {
     const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
     const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
     const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-    daysEl.textContent = days;
-    hoursEl.textContent = hours;
-    minutesEl.textContent = minutes;
-    secondsEl.textContent = seconds;
+    if (daysEl) daysEl.textContent = days;
+    if (hoursEl) hoursEl.textContent = hours;
+    if (minutesEl) minutesEl.textContent = minutes;
+    if (secondsEl) secondsEl.textContent = seconds;
   }, 1000);
 
   /* === FORMULARIO ASISTENCIA === */
-  const form = document.getElementById('rsvpForm');
+  const form = document.getElementById("rsvpForm");
   if (form) {
-    const successBox = document.getElementById('successBox');
-    const errorBox = document.getElementById('errorBox');
+    const successBox = document.getElementById("successBox");
+    const errorBox = document.getElementById("errorBox");
     const submitBtn = form.querySelector("button[type='submit']");
 
-    form.addEventListener('submit', async (e) => {
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
       submitBtn.disabled = true;
       const spinner = document.createElement("span");
@@ -905,28 +901,28 @@ document.addEventListener("DOMContentLoaded", () => {
         const response = await fetch(form.action, {
           method: form.method,
           body: data,
-          headers: { 'Accept': 'application/json' }
+          headers: { "Accept": "application/json" }
         });
 
         if (response.ok) {
-          form.style.display = 'none';
-          errorBox.style.display = 'none';
-          successBox.style.display = 'block';
+          form.style.display = "none";
+          errorBox.style.display = "none";
+          successBox.style.display = "block";
           setTimeout(() => {
-            successBox.style.display = 'none';
-            form.style.display = 'block';
+            successBox.style.display = "none";
+            form.style.display = "block";
             submitBtn.disabled = false;
             spinner.remove();
             form.reset();
             closeAllModals();
           }, 3000);
         } else throw new Error("Error en el envío");
-           } catch (err) {
-        successBox.style.display = 'none';
-        errorBox.style.display = 'block';
+      } catch (err) {
+        successBox.style.display = "none";
+        errorBox.style.display = "block";
         setTimeout(() => {
-          errorBox.style.display = 'none';
-          form.style.display = 'block';
+          errorBox.style.display = "none";
+          form.style.display = "block";
           submitBtn.disabled = false;
           spinner.remove();
         }, 3000);
@@ -934,91 +930,81 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   }
 
-          /* === CAMPO ACOMPAÑANTES (mostrar nombres) === */
+  /* === CAMPO ACOMPAÑANTES === */
   const acompanantesInput = document.getElementById("acompanantes");
   const rowAcompanantesNombres = document.getElementById("rowAcompanantesNombres");
-
   if (acompanantesInput && rowAcompanantesNombres) {
     acompanantesInput.addEventListener("input", () => {
       const value = parseInt(acompanantesInput.value, 10);
-      if (value > 0) {
-        rowAcompanantesNombres.classList.add("show");
-      } else {
-        rowAcompanantesNombres.classList.remove("show");
-      }
+      rowAcompanantesNombres.classList.toggle("show", value > 0);
     });
   }
 
-/* === FORMULARIO RECUERDOS === */
-const recuerdosForm = document.getElementById("recuerdosForm");
-const recuerdosMsg = document.getElementById("recuerdosMsg");
-const fileInput = document.getElementById("foto");
+  /* === FORMULARIO RECUERDOS === */
+  const recuerdosForm = document.getElementById("recuerdosForm");
+  const recuerdosMsg = document.getElementById("recuerdosMsg");
+  const fileInput = document.getElementById("foto");
 
-if (recuerdosForm) {
-  recuerdosForm.addEventListener("submit", async (e) => {
-    e.preventDefault();
-    recuerdosMsg.innerHTML = "";
-    const files = fileInput.files;
-    const submitBtn = recuerdosForm.querySelector('button[type="submit"]');
+  if (recuerdosForm) {
+    recuerdosForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      recuerdosMsg.innerHTML = "";
+      const files = fileInput.files;
+      const submitBtn = recuerdosForm.querySelector('button[type="submit"]');
 
-    if (files.length === 0) {
-      recuerdosMsg.textContent = "⚠️ Selecciona al menos una foto.";
-      return;
-    }
-
-    submitBtn.disabled = true;
-    const spinner = document.createElement("span");
-    spinner.textContent = " ⏳";
-    submitBtn.appendChild(spinner);
-
-    for (const file of files) {
-      try {
-        const reader = new FileReader();
-        const base64 = await new Promise((resolve, reject) => {
-          reader.onloadend = () => resolve(reader.result.split(",")[1]);
-          reader.onerror = reject;
-          reader.readAsDataURL(file);
-        });
-
-        const response = await fetch("https://script.google.com/macros/s/AKfycbwN9bUuAkucwZ3kpuYLdzDqGfnIgwzyQ-q5Wz5qxleE4LRKk5_A0nZ459TZrk4E9WZDvQ/exec", {
-          method: "POST",
-          body: new URLSearchParams({
-            foto: base64,
-            nombreArchivo: file.name,
-            mimeType: file.type
-          })
-        });
-
-        const result = await response.json();
-        if (result.status === "ok") {
-          recuerdosMsg.innerHTML += `✅ ${file.name} subida correctamente<br>`;
-        } else {
-          recuerdosMsg.innerHTML += `❌ Error al subir ${file.name}<br>`;
-        }
-      } catch (err) {
-        recuerdosMsg.innerHTML += `⚠️ Fallo al subir ${file.name}: ${err.message}<br>`;
+      if (files.length === 0) {
+        recuerdosMsg.textContent = "⚠️ Selecciona al menos una foto.";
+        return;
       }
-    }
 
-    submitBtn.disabled = false;
-    spinner.remove();
-  });
-}
+      submitBtn.disabled = true;
+      const spinner = document.createElement("span");
+      spinner.textContent = " ⏳";
+      submitBtn.appendChild(spinner);
 
-/* === MOSTRAR CUÁNTOS ARCHIVOS SE HAN SELECCIONADO === */
-if (fileInput && recuerdosMsg) {
-  fileInput.addEventListener("change", () => {
-    if (fileInput.files.length === 0) {
-      recuerdosMsg.textContent = "";
-    } else if (fileInput.files.length === 1) {
-      recuerdosMsg.textContent = `📷 ${fileInput.files[0].name}`;
-    } else {
-      recuerdosMsg.textContent = `📷 ${fileInput.files.length} archivos seleccionados`;
-    }
-  });
-}
+      for (const file of files) {
+        try {
+          const reader = new FileReader();
+          const base64 = await new Promise((resolve, reject) => {
+            reader.onloadend = () => resolve(reader.result.split(",")[1]);
+            reader.onerror = reject;
+            reader.readAsDataURL(file);
+          });
 
+          const response = await fetch("https://script.google.com/macros/s/AKfycbwN9bUuAkucwZ3kpuYLdzDqGfnIgwzyQ-q5Wz5qxleE4LRKk5_A0nZ459TZrk4E9WZDvQ/exec", {
+            method: "POST",
+            body: new URLSearchParams({
+              foto: base64,
+              nombreArchivo: file.name,
+              mimeType: file.type
+            })
+          });
+
+          const result = await response.json();
+          recuerdosMsg.innerHTML += result.status === "ok"
+            ? `✅ ${file.name} subida correctamente<br>`
+            : `❌ Error al subir ${file.name}<br>`;
+        } catch (err) {
+          recuerdosMsg.innerHTML += `⚠️ Fallo al subir ${file.name}: ${err.message}<br>`;
+        }
+      }
+
+      submitBtn.disabled = false;
+      spinner.remove();
+    });
+
+    /* Mostrar cuántos archivos se seleccionaron */
+    fileInput.addEventListener("change", () => {
+      if (fileInput.files.length === 0) recuerdosMsg.textContent = "";
+      else if (fileInput.files.length === 1)
+        recuerdosMsg.textContent = `📷 ${fileInput.files[0].name}`;
+      else
+        recuerdosMsg.textContent = `📷 ${fileInput.files.length} archivos seleccionados`;
+    });
+  }
+});
 </script>
+
 
 
 
